tests/ui/parser/issues/issue-19398.stderr
error: expected `{`, found keyword `unsafe`
  --> $DIR/issue-19398.rs:2:19
   |
LL | trait T {
   |         - while parsing this item list starting here
LL |     extern "CrabLang" unsafe fn foo();
   |                   ^^^^^^ expected `{`
LL |
LL | }
   | - the item list ends here

error: aborting due to previous error

